[gd_scene load_steps=4 format=3 uid="uid://dgxd0ors0frw3"]

[ext_resource type="Script" uid="uid://cuecqihuptwwx" path="res://scripts/pin.gd" id="1_7o8e5"]
[ext_resource type="Texture2D" uid="uid://c7ne6qsxxcj8" path="res://assets/pin.png" id="1_p1640"]
[ext_resource type="Theme" uid="uid://c71eaxh7s5c5u" path="res://assets/context.tres" id="3_4va3d"]

[node name="pin" type="Node2D"]
top_level = true
z_index = 10
script = ExtResource("1_7o8e5")

[node name="Toggle" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 31
offset_left = -25.0
offset_top = -46.0
offset_right = -8.587437
offset_bottom = -28.168571
scale = Vector2(4.2650256, 4.093895)
button_mask = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(-18.999998, 13.999999)
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_p1640")

[node name="Panel" type="Panel" parent="."]
visible = false
z_index = 20
y_sort_enabled = true
custom_minimum_size = Vector2(100, 150)
offset_left = 54.0
offset_top = -77.0
offset_right = 154.0
offset_bottom = 73.0
theme = ExtResource("3_4va3d")

[node name="Label" type="Label" parent="Panel"]
custom_minimum_size = Vector2(99.8, 0)
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Pin"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 3.0
offset_top = 24.0
offset_right = 134.0
offset_bottom = 90.0
scale = Vector2(0.715, 0.715)
alignment = 1

[node name="Add Connection" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Add Connection"

[node name="Connect To" type="Button" parent="Panel/VBoxContainer"]
visible = false
layout_mode = 2
text = "Connect To"

[node name="Delete" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Delete"

[connection signal="pressed" from="Toggle" to="." method="_on_toggle_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Add Connection" to="." method="_on_add_connection_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Connect To" to="." method="_on_connect_to_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Delete" to="." method="_on_delete_pressed"]
